--- a/app/views/index.ejs
+++ b/app/views/index.ejs
@@ -17,93 +17,14 @@
 </head>
 
 <body>
-  <!-- .....................................................................CABECERA---------------------------->
-
-    <div id="top">
-        <div class="container">
-            <div class="row">
-              <h1>Bienvenido a JuggerLeague</h1>
-                <div class="col-xs-5 contact">
-                    <p class="hidden-sm hidden-xs">Liga de robótica</p>
-                    <p class="hidden-md hidden-lg"><a href="#" data-animate-hover="pulse"><i class="fa fa-phone"></i></a>  <a href="#" data-animate-hover="pulse"><i class="fa fa-envelope"></i></a>
-                    </p>
-                </div>
-                <div class="col-xs-7">
-
-                    <% if ( user ) { %>
+  <!--CABECERA---------------------------->
+  <% include partials/cabecera %>
 
 
-                    <div class="login">
-                      <a href="/config"><i class="fa fa-cog"></i> <span class="hidden-xs text-uppercase">Configuración</span></a>
-                        <a href="/logout"><i class="fa fa-sign-out"></i> <span class="hidden-xs text-uppercase">Salir</span></a>
-
-                    </div>
-                <% } else { %>
-                  <div class="social">
-                      <a href="/oauth/facebook" class="external facebook" data-animate-hover="pulse"><i class="fa fa-facebook"></i></a>
-
-                  </div>
-                  <div class="login">
-                      <a href="/register"><i class="fa fa-sign-in"></i> <span class="hidden-xs text-uppercase">Registrarse</span></a>
-                      <a href="/login"><i class="fa fa-user"></i> <span class="hidden-xs text-uppercase">Identificarse</span></a>
-                  </div>
-                <% } %>
-
-
-
-                </div>
-            </div>
-        </div>
-    </div>
-
-
-
-<!-- .....................................................................FIN CABECERA---------------------------->
-
-<!--Si existe un usuario-->
+<!--Si hay un usuario conectado-->
  <% if ( user ) { %>
-
-<!-- .....................................................................BARRA NAVEGACIÓN---------------------------->
-
-  <div class="navbar-affixed-top" data-spy="affix" data-offset-top="200">
-
-      <div class="navbar navbar-default yamm" role="navigation" id="navbar">
-
-          <div class="container">
-
-            <div class="navbar-collapse collapse" id="navigation">
-
-            <ul class="nav navbar-nav navbar-right">
-              <li class="active">
-                  <a href="#" >Perfil </a>
-              </li>
-              <li>
-                  <a href="/calendario" >Calendario</a>
-              </li>
-              <li >
-                  <a href="/tienda">Tienda </a>
-              </li>
-              <li >
-                  <a href="/tienda">Streaming </a>
-              </li>
-
-              <li class="dropdown">
-                  <a href="javascript: void(0)" class="dropdown-toggle" data-toggle="dropdown">Liga <b class="caret"></b></a>
-                  <ul class="dropdown-menu">
-                      <li><a href="/clasificacion">Clasificación</a>
-                      </li>
-                      <li><a href="/combates">Combates</a>
-                      </li>
-                  </ul>
-              </li>
-              </ul>
-
-              </div>
-
-          </div>
-      </div>
-    </div>
-    <!-- FIN BARRA DE NAVEGACIÓN ................................................................-->
+<!-- BARRA NAVEGACIÓN---------------------------->
+<% include partials/barranav %>
 
         <h2>Hola <%=user%> </h2>
 
