--- a/app/views/partials/cabecera.ejs
+++ b/app/views/partials/cabecera.ejs
@@ -10,13 +10,13 @@
                 </div>
                 <div class="col-xs-7">
 
-                    <% if ( user ) { %>
+                    <% if ( tipo ) { %>
 
 
                     <div class="login">
                       <a href="/config"><i class="fa fa-cog"></i> <span class="hidden-xs text-uppercase">Configuración</span></a>
                       <a href="#" data-toggle="modal" data-target="#contact-modal"><i class="fa fa-info-circle"></i> <span class="hidden-xs text-uppercase">Contacto</span></a>
-                        <a href="/logout"><i class="fa fa-sign-out"></i> <span class="hidden-xs text-uppercase">Salir</span></a>
+                      <a href="/logout"><i class="fa fa-sign-out"></i> <span class="hidden-xs text-uppercase">Salir</span></a>
 
                     </div>
                 <% } else { %>
