--- a/app/views/tienda.ejs
+++ b/app/views/tienda.ejs
@@ -20,7 +20,7 @@
 <% include partials/cabecera %>
 <% include partials/barranav %>
 
-        <h2>Hola <%=user%> , bienvenido a la tienda </h2>
+        <h2>Hola <%=tipo%> , bienvenido a la tienda </h2>
 
 
 
