--- a/app/views/configura.ejs
+++ b/app/views/configura.ejs
@@ -20,9 +20,49 @@
 <% include partials/cabecera %>
 <% include partials/barranav %>
 
-        <h2>Hola <%=user%> , bienvenido a pag de configuración </h2>
+        <h2>Hola <%=tipo%>, bienvenido a pag de configuración </h2>
 
+        <div class="col-md-9 clearfix" id="customer-account">
 
+            <p class="lead">Cambia tus datos personales aquí</p>
+            <div class="box">
+
+                <div class="heading">
+                    <h3 class="text-uppercase">Cambiar contraseña</h3>
+                </div>
+
+                <form action="/config" method="post">
+                    <div class="row">
+                        <div class="col-sm-6">
+                            <div class="form-group">
+                                <label for="password_old">Contraseña actual</label>
+                                <input type="password" class="form-control" id="password_old">
+                            </div>
+                        </div>
+                    </div>
+                    <div class="row">
+                        <div class="col-sm-6">
+                            <div class="form-group">
+                                <label for="password">Nueva contraseña</label>
+                                <input type="password" class="form-control" id="password_1">
+                            </div>
+                        </div>
+                        <div class="col-sm-6">
+                            <div class="form-group">
+                                <label for="password_2">Repite nueva contraseña</label>
+                                <input type="password" class="form-control" id="password_2">
+                            </div>
+                        </div>
+                    </div>
+                    <!-- /.row -->
+
+                    <div class="text-center">
+                        <button type="submit" class="btn btn-template-main"><i class="fa fa-save"></i> Guardar cambios</button>
+                    </div>
+                </form>
+
+            </div>
+            <!-- /.box -->
 
 <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.1.1/jquery.min.js"></script>
 <script src="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/js/bootstrap.min.js"></script>
