--- a/app/views/register.ejs
+++ b/app/views/register.ejs
@@ -21,7 +21,7 @@
             <input type="text" id="username" name="username" class="form-control" placeholder="Usuario" required autofocus>
 
             <label for="name" class="sr-only">Name</label>
-            <input type="text" id="name" name="name" class="form-control" placeholder="Nombre" required autofocus>
+            <input type="text" id="name" name="equipo" class="form-control" placeholder="Equipo" required autofocus>
 
             <label for="email" class="sr-only">E-mail</label>
             <input type="email" id="email" name="email" class="form-control" placeholder="E-mail" required>
