--- a/app/views/clasificacion.ejs
+++ b/app/views/clasificacion.ejs
@@ -17,12 +17,27 @@
 </head>
 
 <body>
-<% include partials/cabecera %>
+
+<!--CABECERA---------------------------->
+  <% include partials/cabecera %>
+
+
+<!--Si hay un usuario conectado-->
+ <% if ( tipo=="administrador" ) { %>
+<!-- BARRA NAVEGACIÓN---------------------------->
 <% include partials/barranav %>
 
-        <h2>Hola <%=user%> , bienvenido a la clasificación.</h2>
-				<p>Puedes consultar tu posición.</p>
+        <h2>Puedes consultar todo sobre la calsificación y realizar cambios </h2>
+				<h3><%=tipo%></h3>
+<% }  %>
 
+<% if ( tipo=="usuario" ) { %>
+<!-- BARRA NAVEGACIÓN---------------------------->
+<% include partials/barranav %>
+
+       <h2>Hola <%=tipo%>, esta es la pag principal </h2>
+
+<% } %>
 
 
 <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.1.1/jquery.min.js"></script>
