--- a/app/views/combates.ejs
+++ b/app/views/combates.ejs
@@ -17,11 +17,27 @@
 </head>
 
 <body>
-<% include partials/cabecera %>
+
+<!--CABECERA---------------------------->
+  <% include partials/cabecera %>
+
+
+<!--Si hay un usuario conectado-->
+ <% if ( tipo=="administrador" ) { %>
+<!-- BARRA NAVEGACIÓN---------------------------->
 <% include partials/barranav %>
 
-        <h2>Hola <%=user%> , bienvenido a la página de combates.</h2>
-				<p>Puedes consultar los próximos enfrentamientos.</p>
+        <h2>Puedes consultar todo sobre los combates y realizar cambios </h2>
+				<h3><%=tipo%></h3>
+<% }  %>
+
+<% if ( tipo=="usuario" ) { %>
+<!-- BARRA NAVEGACIÓN---------------------------->
+<% include partials/barranav %>
+
+       <h2>Hola <%=tipo%>, esta es la pag principal </h2>
+
+<% } %>
 
 
 
