--- a/app/views/partials/cabecera.ejs
+++ b/app/views/partials/cabecera.ejs
@@ -14,6 +14,7 @@
 
 
                     <div class="login">
+											<a href="/endirecto"><i class="fa fa-video-camera"></i> <span class="hidden-xs text-uppercase">En directo</span></a>
                       <a href="/config"><i class="fa fa-cog"></i> <span class="hidden-xs text-uppercase">Configuración</span></a>
                       <a href="#" data-toggle="modal" data-target="#contact-modal"><i class="fa fa-info-circle"></i> <span class="hidden-xs text-uppercase">Contacto</span></a>
                       <a href="/logout"><i class="fa fa-sign-out"></i> <span class="hidden-xs text-uppercase">Salir</span></a>
@@ -25,6 +26,7 @@
 
                   </div>
                   <div class="login">
+											<a href="/endirecto"><i class="fa fa-video-camera"></i> <span class="hidden-xs text-uppercase">En directo</span></a>
                       <a href="/register"><i class="fa fa-sign-in"></i> <span class="hidden-xs text-uppercase">Registrarse</span></a>
                       <a href="/login"><i class="fa fa-user"></i> <span class="hidden-xs text-uppercase">Identificarse</span></a>
                   </div>
