--- a/app/views/partials/cabecera.ejs
+++ b/app/views/partials/cabecera.ejs
@@ -37,7 +37,7 @@
         </div>
     </div>
 
-    <!-- *** CONFIGURA MODAL ***
+    <!-- *** CONTACTA MODAL ***
 _________________________________________________________ -->
 
     <div class="modal fade" id="contact-modal" tabindex="-1" role="dialog" aria-labelledby="Contact" aria-hidden="true">
