Mas cosas de streaming...

--- a/app/views/endirecto.ejs
+++ b/app/views/endirecto.ejs
@@ -103,6 +103,7 @@
       <script>
         var socket = io.connect('http://localhost:1337');
         var users;
+        var sockets;
 
         /**Al realizar la conexión se procede a comunicar que se ha conectado
         *Se comunica que no se trata de un emisor
