--- a/app/views/compra.ejs
+++ b/app/views/compra.ejs
@@ -25,7 +25,7 @@
 <!-- BARRA NAVEGACIÓN---------------------------->
 <% include partials/barranav %>
 
-       <div class="col-md-9 clearfix" id="customer-order">
+       <div class="col-md-9 clearfix">
            <p class="lead">Gracias por tu compra, dentro de poco recibirás un mensaje de confirmación.</p>
            <p class="lead text-muted">Si tienes alguna duda no dudes en contactarnos.</p>
          </div>
