--- a/app/views/streaming.ejs
+++ b/app/views/streaming.ejs
@@ -37,9 +37,15 @@
 <% if ( tipo=="usuario" ) { %>
 <!-- BARRA NAVEGACIÓN---------------------------->
 <% include partials/barranav %>
+  <div class="text-left">
+      <p class="lead">En esta página podrás compartir tu streaming del evento</p>
+    </div>
+  <div class="text-center">
+  <button type="button" class="btn btn-template-main" id="exitButton">Terminar Streaming</button>
+</br>
+</div>
+</br>
 
-  <h2>Hola <%=tipo%>, esta es la pag principal </h2>
-  <button type="button" id="exitButton">Terminar Streaming</button>
   <script>
     var c;
     var video;
@@ -75,16 +81,29 @@
     **/
     function setup(){
       c = createCanvas(640,480);
+      c.position(400,300);
+
       video = createCapture(VIDEO);
       video.size(640,480);
       video.hide();
     }
     function draw(){
-      image(video,0,0,640,480);
       if(frameRate()> 55){
-        socket.emit('sendStream',{name:userName,capture:c.canvas.toDataURL()});
+        socket.emit('sendStream',{name:userName,capture:c.canvas.toDataURL('image/jpeg', 0.7)});
       }
+      image(video,0,0,640,480);
+      background('rgba(56,176,222, 0.25)');
+      noFill();
+      strokeWeight(4);
+      beginShape();
+      vertex(0, 0);
+      vertex(640, 0);
+      vertex(640, 480);
+      vertex(0, 480);
+      endShape(CLOSE);
+
     }
+
 
     /**Aquí se añade la función a ejecutar cuando se hace click en el botón de Terminar stopStreaming
     *Envía el evento 'closeConnection' para avisar de que se termina de hacer streaming
