--- a/app/views/tienda.ejs
+++ b/app/views/tienda.ejs
@@ -21,18 +21,12 @@
 <% include partials/cabecera %>
 <% include partials/barranav %>
 
-<div id="heading-breadcrumbs">
     <div class="container">
         <div class="row">
-            <div class="col-md-7">
-                <h1>Tienda</h1>
-            </div>
+          <div class="heading">
+              <h3 class="text-uppercase">Tienda</h3>
+          </div>
         </div>
-    </div>
-</div>
-
-<div id="content">
-    <div class="container">
         <p class="text-muted lead text-center">
           En esta página podrás comprar todas las mejoras para tu robot. Gasta con cabeza, los créditos son limitados</br></br>
           Tu crédito actual es <%=credito%>
@@ -78,6 +72,7 @@
     <!-- /.container -->
 
 </div>
+
 <!-- /#content -->
 
 <!-- *** COMPRA MODAL ***
