--- a/app/views/endirecto.ejs
+++ b/app/views/endirecto.ejs
@@ -22,83 +22,19 @@
 <body>
   <!--CABECERA---------------------------->
   <% include partials/cabecera %>
-
-
-<!--Si hay un usuario conectado-->
- <% if ( tipo=="administrador" ) { %>
-<!-- BARRA NAVEGACIÓN---------------------------->
-<% include partials/barranav %>
-
-        <h2>Hola señor administrador, aqui puedes ver lo que estan retransmitiendo en streaming</h2>
-
-<% } else if ( tipo=="usuario" ) { %>
-<!-- BARRA NAVEGACIÓN---------------------------->
-<% include partials/barranav %>
-
-    <h2>Hola usuario, aqui puedes ver el streaming </h2>
+  <div class="container">
+  </br>
+    <div class="heading">
+        <h3 class="text-uppercase">Eventos en directo</h3>
+    </div>
+    <div>
+      <p class="text-muted lead text-left">En esta página podrás visualizar los eventos sin tener que identificarte</p>
+    </div>
     <div id='all' class='all'>
       <div id="fullContent" class="fullContent">
       </div>
     </div>
-
-    <script>
-      var socket = io.connect('http://localhost:1337');
-      var users;
-
-      /**Al realizar la conexión se procede a comunicar que se ha conectado
-      *Se comunica que no se trata de un emisor
-      **/
-      socket.emit('newConnection', {isEmitter : false, name : undefined});
-
-      /**Al recibir el evento 'stopStreaming' se modifica la página para que tenga el aspecto principal
-      *Se añade el div en el cual se van añadiendo los emisores que se conectar
-      **/
-      socket.on('stopStreaming',function(data){
-        var all = document.getElementById("all").innerHTML = "";
-        $( ".all" ).append( '<div id=\'fullContent\' class=\'fullContent\'><div>' );
-      })
-
-      /**Al recibir el evento 'updateUsers' se recoge el array de emisores
-      *Se muestra el nombre de cada emisor seguido de un botón que permite visualizar el streaming
-      **/
-      socket.on('updateUsers',function(data){
-        users = data;
-        var fullContent = document.getElementById("fullContent").innerHTML = "";
-        if(fullContent!=null){
-          for(var i=0;i<users.length;i++){
-          $( ".fullContent" ).append( "<p>Usuario " + users[i] + " emitiendo</p> <button type=\"button\" id=\"" + users[i] + "\" onclick=\"verStreaming\(\'" + users[i] + "\'\)\">Visualizar</button>");
-          }
-        }
-      });
-
-      /**Función para activar la visualización del streaming
-      *Se añade un <img> para representar los frames recibidos
-      **/
-      function verStreaming(name){
-        var all = document.getElementById("all").innerHTML = "";
-        $( ".all" ).append( '<img style=\"width:640;height:480;\" id=\"stream\" \/>' );
-      }
-
-      /**Con el evento 'sendStream' se recogerá cada frame recibido y se representará en el <img> creado
-      *Si el <img> no existe (es null), no se realizará nada
-      *Esto ocurre cuando no se ha pulsado el botón de stream
-      **/
-      socket.on('sendStream',function(data){
-        var stream = document.getElementById('stream');
-        if(stream!=null){
-          stream.src = data.capture;
-        }
-      });
-
-    </script>
-
-<% } else { %>
-
-			<h2>Hola desconocido, puedes ver el streaming sin tener cuenta </h2>
-      <div id='all' class='all'>
-        <div id="fullContent" class="fullContent">
-        </div>
-      </div>
+    </div>
 
       <script>
         var socket = io.connect('http://localhost:1337');
@@ -115,7 +51,7 @@
         **/
         socket.on('stopStreaming',function(data){
           var all = document.getElementById("all").innerHTML = "";
-          $( ".all" ).append( '<div id=\'fullContent\' class=\'fullContent\'><div>' );
+          $( ".all" ).append( '<div id=\'fullContent\' class=\'fullContent\'></div>' );
         })
 
         /**Al recibir el evento 'updateUsers' se recoge el array de emisores
@@ -124,9 +60,12 @@
         socket.on('updateUsers',function(data){
           users = data;
           var fullContent = document.getElementById("fullContent").innerHTML = "";
+          if(users.length==0) {
+            $( ".fullContent" ).append( "<p class=\"text-danger lead\">Lo sentimos, no hay usuarios retransmitiendo en estos momentos</p>");
+          }
           if(fullContent!=null){
             for(var i=0;i<users.length;i++){
-            $( ".fullContent" ).append( "<button type=\"button\" class=\"btn btn-template-main\" \
+            $( ".fullContent" ).append( "<p class=\"lead\"> Estos son los usuarios retransmitiendo en este momento </p> <button type=\"button\" class=\"btn btn-template-main\" \
              id=\"" + users[i] + "\" onclick=\"verStreaming\(\'" + users[i] + "\'\)\">Ver streaming de "+users[i]+"</button>");
             }
           }
@@ -137,7 +76,7 @@
         **/
         function verStreaming(name){
           var all = document.getElementById("all").innerHTML = "";
-          $( ".all" ).append( '<img id=\"stream\" \/>' );
+          $( ".all" ).append( '<center> <img width=\"60%\" heigth=\"60%\" id=\"stream\" \/> </center>' );
         }
 
         /**Con el evento 'sendStream' se recogerá cada frame recibido y se representará en el <img> creado
@@ -153,7 +92,6 @@
 
       </script>
 
-<% } %>
 
 <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.1.1/jquery.min.js"></script>
 <script src="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/js/bootstrap.min.js"></script>
